Pack announcement message is now toggle-able
The Strawberry Pack's announcement message is now a configurable setting
that can be toggled off.

--- a/data/strawberry/tags/functions/config_toggle_messages.json
+++ b/data/strawberry/tags/functions/config_toggle_messages.json
@@ -8,6 +8,7 @@
         "strawberry:config/lightning_structures/msg",
         "strawberry:config/limit_wandering_trader_spawning/msg",
         "strawberry:config/nav_info/msg",
+		"strawberry:config/pack_announcement/msg",
         "strawberry:config/quark_ladders/msg",
         "strawberry:config/shulker_mites/msg",
         "strawberry:config/sky_warp/msg",
