--- a/data/strawberry/advancements/recipes/misc/notch_apple.json
+++ b/data/strawberry/advancements/recipes/misc/notch_apple.json
@@ -11,7 +11,9 @@
             "conditions": {
                 "items": [
                     {
-                        "item": "minecraft:apple"
+                        "items": [
+													"minecraft:apple"
+												]
                     }
                 ]
             }
@@ -21,7 +23,9 @@
             "conditions": {
                 "items": [
                     {
-                        "item": "minecraft:gold_block"
+                        "items": [
+													"minecraft:gold_block"
+												]
                     }
                 ]
             }
